<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="fr.charline.advantcalendar.christmas.ChristmasActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tree"
            android:id="@+id/imageView3"
            android:contentDescription="@string/sapin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            app:srcCompat="@mipmap/ic_1"
            android:id="@+id/imageButton"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_1"
            android:onClick="onClick1"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton25"
            app:layout_constraintEnd_toStartOf="@+id/imageButton7" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_2"
            android:id="@+id/imageButton2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_2"
            android:onClick="onClick2"
            app:layout_constraintTop_toBottomOf="@+id/imageButton10"
            android:layout_marginStart="28dp"
            app:layout_constraintStart_toEndOf="@+id/imageButton12" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_3"
            android:id="@+id/imageButton3"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_3"
            android:onClick="onClick3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton19"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" />

    <ImageButton
            android:layout_width="wrap_content"
            app:srcCompat="@mipmap/ic_4"
            android:id="@+id/imageButton4"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_4"
            android:layout_height="wrap_content"
            android:onClick="onClick4"
            app:layout_constraintTop_toBottomOf="@+id/imageButton10"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            android:layout_marginStart="36dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_5"
            android:id="@+id/imageButton5"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_5"
            android:onClick="onClick5"
            app:layout_constraintStart_toEndOf="@+id/imageButton6"
            android:layout_marginStart="40dp"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_6"
            android:id="@+id/imageButton6"
            android:contentDescription="@string/dec_6"
            android:background="@android:color/transparent"
            android:onClick="onClick6"
            app:layout_constraintStart_toEndOf="@+id/imageButton15"
            android:layout_marginStart="28dp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton20" />

    <ImageButton
            android:layout_width="51dp"
            android:layout_height="46dp"
            app:srcCompat="@mipmap/ic_7"
            android:id="@+id/imageButton7"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_7"
            android:onClick="onClick7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="140dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton13" />

    <ImageButton
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_8"
            android:id="@+id/imageButton8"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_8"
            android:onClick="onClick8"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton19"
            app:layout_constraintStart_toEndOf="@+id/imageButton3"
            android:layout_marginStart="28dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_9"
            android:id="@+id/imageButton9"
            android:contentDescription="@string/dec_9"
            android:background="@android:color/transparent"
            android:onClick="onClick9"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton13"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            android:layout_marginStart="28dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_10"
            android:id="@+id/imageButton10"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_10"
            android:onClick="onClick10"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton21"
            app:layout_constraintStart_toEndOf="@+id/imageButton22" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_11"
            android:id="@+id/imageButton11"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_11"
            android:onClick="onClick11"
            app:layout_constraintTop_toBottomOf="@+id/imageButton18"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="44dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_12"
            android:id="@+id/imageButton12"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_12"
            android:onClick="onClick12"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            app:layout_constraintStart_toEndOf="@+id/imageButton17"
            android:layout_marginStart="28dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_13"
            android:id="@+id/imageButton13"
            android:contentDescription="@string/dec_13"
            android:background="@android:color/transparent"
            android:onClick="onClick13"
            app:layout_constraintStart_toEndOf="@+id/imageButton25"
            android:layout_marginStart="28dp"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton19" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_14"
            android:id="@+id/imageButton14"
            android:contentDescription="@string/dec_14"
            android:background="@android:color/transparent"
            android:onClick="onClick14"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton9"
            app:layout_constraintStart_toEndOf="@+id/imageButton18"
            android:layout_marginStart="28dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_15"
            android:id="@+id/imageButton15"
            android:contentDescription="@string/dec_15"
            android:background="@android:color/transparent"
            android:onClick="onClick15"
            app:layout_constraintStart_toEndOf="@+id/imageButton11"
            android:layout_marginStart="36dp"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton24" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_16"
            android:id="@+id/imageButton16"
            android:contentDescription="@string/dec_16"
            android:background="@android:color/transparent"
            android:onClick="onClick16"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton4"
            app:layout_constraintStart_toEndOf="@+id/imageButton14"
            android:layout_marginStart="28dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_17"
            android:id="@+id/imageButton17"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_17"
            android:onClick="onClick17"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_18"
            android:id="@+id/imageButton18"
            android:contentDescription="@string/dec_18"
            android:background="@android:color/transparent"
            android:onClick="onClick18"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton17"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="92dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_19"
            android:id="@+id/imageButton19"
            android:contentDescription="@string/dec_19"
            android:background="@android:color/transparent"
            android:onClick="onClick19"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="168dp"
            android:layout_marginTop="8dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_20"
            android:id="@+id/imageButton20"
            android:background="@android:color/transparent"
            android:contentDescription="@string/dec_20"
            android:onClick="onClick20"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            app:layout_constraintStart_toEndOf="@+id/imageButton24"
            android:layout_marginStart="28dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_21"
            android:id="@+id/imageButton21"
            android:contentDescription="@string/dec_21"
            android:background="@android:color/transparent"
            android:onClick="onClick21"
            app:layout_constraintStart_toEndOf="@+id/imageButton13"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton8" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_22"
            android:id="@+id/imageButton22"
            android:contentDescription="@string/dec_22"
            android:background="@android:color/transparent"
            android:onClick="onClick22"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton13"
            app:layout_constraintStart_toEndOf="@+id/imageButton7" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_23"
            android:id="@+id/imageButton23"
            android:contentDescription="@string/dec_23"
            android:background="@android:color/transparent"
            android:onClick="onClick23"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="168dp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton14" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_24"
            android:id="@+id/imageButton24"
            android:contentDescription="@string/dec_24"
            android:background="@android:color/transparent"
            android:onClick="onClick24"
            app:layout_constraintTop_toBottomOf="@+id/imageButton12"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_25"
            android:id="@+id/imageButton25"
            android:contentDescription="@string/dec_25"
            android:background="@android:color/transparent"
            android:onClick="onClick25"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="92dp" />

</android.support.constraint.ConstraintLayout>
